I created a script file that holds logic for card reading, based choosen click events

--- a/style.css
+++ b/style.css
@@ -27,8 +27,10 @@ body {
 }
 .card {
 	cursor: pointer;
+	width: 200px;
+	height: 277px;
 }
-.message {
+.message-wrapper {
 	text-align: center;
 	font-weight: bolder;
 	font-size: 48px;
